

			     BZFlag release notes

* Stream Rolling collision detection is now compressed in height - Alfredo Tupone
* Rendering options are actuated immediately - Alfredo Tupone
* Height of base goes through the wire (base thickness defined on world files) - Alfredo Tupone
* Fixed collision for various things (falling through floor when lagging, being stuck when tank expands, shot going into the ground, collision with pyramids) - Alfredo Tupone
* Avoiding stuck on connection - Alfredo Tupone
* Web/Database based list server - Alfredo Tupone, ...
* Fixed some documentation bugs in the bzfs manual and the bzfs help output - KR (through Lars Luthman)
* Save world files from the client - Dave Brosius
* Drop flags on pause after timeout - Sean Morrison
* Set size of shots on radar - Sean Morrison
* Server spawn positions - Dave Brosius
* Added client-side automatic team selection - Alfredo Tupone, Sean Morrison
* Calc jitter based on client timestamps in MsgPlayerUpdate packets - Frank Thilo
* Add /reset var server cmd - Dave Brosius
* Add /set var value server cmd - Dave Brosius
* improved /ban /banlist added reason and time parsing - Dennis Pedersen
* Shortened GM to 0.95 normal shot (tuneable) - Tim Riker
* tarball now supports "rpm -tb <foo>.tar.gz" - Tim Riker
* bzfs use only 1 port instead of 2 (by default IANA assigned: 5154) - Alfredo Tupone
* bots (-solo) game is by far more playable - Alfredo Tupone
* Added client-side chat filtering - Sean Morrison
* Configuration files and cache is stored in ~/.bzf/ on *IX - Lars Luthman
* Added team ID to shots for TK reasons (1.9.2) - Jeff Myers
* Changed version numbers to be xx.xx.xx and display with BuildOS and Build Date ( 1.9.0) - Jeff Myers & others for auto tools
* Added voting sytem with /poll, /vote, and /veto commands (1.9.0) - Sean Morrison
* Added bzadmin - Lars Luthman
* Munitions now bounce off buildings/ground in z direction - Dave Brosius
* World object and -worldsize paramaters - Jeff Myers