@@ -18,6 +18,8 @@
 #endif
 
 
+#include <ctime>
+#include <fstream>
 #include <vector>
 #include <string>
 #include <algorithm>
@@ -198,7 +200,105 @@ public:
       }
     }
   }
-
+  
+  /** This function tells this object where to save the banlist, and where
+      to load it from. */
+  void setBanFile(const std::string& filename) {
+    banFile = filename;
+  }
+  
+  /** This function loads a banlist from the ban file, if it has been set. */
+  bool load() {
+    
+    // try to open the ban file
+    std::ifstream is(banFile.c_str());
+    if (!is.good())
+      return false;
+    
+    // try to read ban entries
+    std::string ipAddress, bannedBy, reason, tmp;
+    long banEnd;
+    while (!is.eof()) {
+      is>>ipAddress;
+      std::string::size_type n;
+      while ((n = ipAddress.find('*')) != std::string::npos) {
+	ipAddress.replace(n, 1, "255");
+      }
+      is>>tmp;
+      if (tmp != "end:")
+	return false;
+      is>>banEnd;
+      if (banEnd != 0) {
+	banEnd -= long(std::time(NULL) -TimeKeeper::getCurrent().getSeconds());
+	banEnd /= 60;
+	if (banEnd == 0)
+	  banEnd = -1;
+      }
+      is>>tmp;
+      if (tmp != "banner:")
+	return false;
+      is.ignore(1);
+      std::getline(is, bannedBy);
+      is>>tmp;
+      if (tmp != "reason:")
+	return false;
+      is.ignore(1);
+      std::getline(is, reason);
+      is>>std::ws;
+      if (banEnd != 0 && banEnd < TimeKeeper::getCurrent().getSeconds())
+	continue;
+      if (!ban(ipAddress, (bannedBy.size() ? bannedBy.c_str(): NULL), banEnd, 
+	       (reason.size() > 0 ? reason.c_str() : NULL)))
+	return false;
+    }
+    return true;
+  }
+  
+  /** This function saves the banlist to the ban file, if it has been set. */
+  void save() {
+    if (banFile.size() == 0)
+      return;
+    std::ofstream os(banFile.c_str());
+    if (!os.good()) {
+      std::cerr<<"Could not open "<<banFile<<std::endl;
+      return;
+    }
+    banList_t::const_iterator it;
+    for (it = banList.begin(); it != banList.end(); ++it) {
+      
+      // print address
+      in_addr mask = it->addr;
+      os<<((ntohl(mask.s_addr) >> 24) % 256)<<'.';
+      if ((ntohl(mask.s_addr) & 0x00ffffff) == 0x00ffffff) {
+        os<<"*.*.*";
+      } else {
+        os<<((ntohl(mask.s_addr) >> 16) % 256)<<'.';
+        if ((ntohl(mask.s_addr) & 0x0000ffff) == 0x0000ffff) {
+          os<<"*.*";
+        } else {
+          os<<((ntohl(mask.s_addr) >> 8) % 256)<<'.';
+          if ((ntohl(mask.s_addr) & 0x000000ff) == 0x000000ff)
+	    os<<"*";
+          else
+	    os<<(ntohl(mask.s_addr) % 256);
+        }
+      }
+      os<<'\n';
+      
+      // print ban end, banner, and reason
+      if (it->banEnd.getSeconds() == 
+	  TimeKeeper::getSunExplodeTime().getSeconds()) {
+	os<<"end: 0"<<'\n';
+      }
+      else {
+	os<<"end: "<<(long(it->banEnd.getSeconds() + std::time(NULL) - 
+			   TimeKeeper::getCurrent().getSeconds()))<<'\n';
+      }
+      os<<"banner: "<<it->bannedBy<<'\n';
+      os<<"reason: "<<it->reason<<'\n';
+    }
+  }
+  
 private:
   bool convert(char *ip, in_addr &mask);
 
@@ -206,6 +306,7 @@ private:
 
   typedef std::vector<BanInfo> banList_t;
   banList_t banList;
+  std::string banFile;
 };
 
 #else
